dao complete